--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,6 +25,7 @@ jobs:
         pip install ccxt
         pip install pandas
         pip install python-telegram-bot
+        pip install bs4
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run
       run: |
