--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -17,6 +17,7 @@ jobs:
         pip install ccxt 
         pip install pandas
         pip install python-telegram-bot
+        pip install bs4
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run 
       run: | 
