--- a/.github/workflows/manual1.yml
+++ b/.github/workflows/manual1.yml
@@ -28,4 +28,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run
       run: |
-        python main.py
+        python main1.py
