--- a/.github/workflows/manual_run1.yml
+++ b/.github/workflows/manual_run1.yml
@@ -21,4 +21,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run 
       run: | 
-        python main.py
+        python main1.py
