--- a/.github/workflows/manual_run1.yml
+++ b/.github/workflows/manual_run1.yml
@@ -18,6 +18,7 @@ jobs:
         pip install pandas
         pip install python-telegram-bot
         pip install bs4
+        pip install telegram
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run 
       run: | 
