--- a/.github/workflows/manual_run1.yml
+++ b/.github/workflows/manual_run1.yml
@@ -13,12 +13,14 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies 
       run: | 
-        python -m pip install --upgrade pip 
-        pip install ccxt 
-        pip install pandas
-        pip install python-telegram-bot
+        python -m pip install --upgrade pip
+        pip install requests
         pip install bs4
+        pip install pprint
+        pip install sys
+        pip install python-telegram-bot==13.14
+        pip install asyncio
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run 
       run: | 
-        python main1.py
+        python final.py
