--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -23,6 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests
         pip install bs4
+        pip uninstall python-telegram-bot
         pip install python-telegram-bot==13.14
         pip install asyncio
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
