--- a/.github/workflows/manual_run1.yml
+++ b/.github/workflows/manual_run1.yml
@@ -17,7 +17,8 @@ jobs:
         pip install requests
         pip install bs4
         pip uninstall python-telegram-bot
-        pip install python-telegram-bot==13.14
+        #pip install python-telegram-bot==13.14
+        pip install python-telegram-bot
         pip install asyncio
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run 
