--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -29,4 +29,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run
       run: |
-        python final.py
+        python materials.py
+        python parts.py
+        python equipment.py
+        python osat.py
+        python testparts.py
