--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: 'semiconductor_newss'
+name: 'semiconductor_news'
 
 on:
   schedule:
