--- a/.github/workflows/manual_run1.yml
+++ b/.github/workflows/manual_run1.yml
@@ -1,33 +1,26 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+name: 'Semiconductor_news_manual'
 
-name: 'semiconductor_news_manual'
-
-on:
-  schedule:
-    - cron: "0 * * * *"
+on: workflow_dispatch
 
 jobs:
   run:
-
     runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    steps: 
+    - uses: actions/checkout@v3 
+    - name: Set up Python 3.10 
+      uses: actions/setup-python@v3 
       with:
         python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install ccxt
+    - name: Install dependencies 
+      run: | 
+        python -m pip install --upgrade pip 
+        pip install ccxt 
         pip install pandas
         pip install python-telegram-bot
         pip install bs4
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: run
-      run: |
+    - name: run 
+      run: | 
         python materials.py
         python parts.py
         python equipment.py
