--- a/.github/workflows/manual_run1.yml
+++ b/.github/workflows/manual_run1.yml
@@ -7,22 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
     - uses: actions/checkout@v3 
-    - name: Set up Python 3.10 
+    - name: Set up Python 3.8.10 
       uses: actions/setup-python@v3 
       with:
-        python-version: "3.10"
+        python-version: "3.8.10"
     - name: Install dependencies 
       run: | 
         python -m pip install --upgrade pip 
         pip install ccxt 
         pip install pandas
-        pip install python-telegram-bot
+        pip install python-telegram-bot==20.3
         pip install bs4
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run 
       run: | 
-        python materials.py
-        python parts.py
-        python equipment.py
-        python osat.py
-        python testparts.py"
+        python final.py
