--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -9,28 +9,21 @@ on:
 
 jobs:
   run:
-
     runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    steps: 
+    - uses: actions/checkout@v3 
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3 
       with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests
+        python-version: "3.8"
+    - name: Install dependencies 
+      run: | 
+        python -m pip install --upgrade pip 
+        pip install ccxt 
+        pip install pandas
+        pip install python-telegram-bot==20.3
         pip install bs4
-        pip uninstall python-telegram-bot
-        pip install python-telegram-bot==13.14
-        pip install asyncio
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: run
-      run: |
-        python materials.py
-        python parts.py
-        python equipment.py
-        python osat.py
-        python testparts.py
+    - name: run 
+      run: | 
+        python final.py
