--- a/.github/workflows/manual_run2.yml
+++ b/.github/workflows/manual_run2.yml
@@ -21,4 +21,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run 
       run: | 
-        python final.py
+        python final1.py
