--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -6,26 +6,25 @@ name: 'semi_news'
 on:
   schedule:
     - cron: "0 18 * * *"
-
+    
 jobs:
   run:
-
     runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    steps: 
+    - uses: actions/checkout@v3 
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3 
       with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install ccxt
+        python-version: "3.8"
+    - name: Install dependencies 
+      run: | 
+        python -m pip install --upgrade pip 
+        pip install ccxt 
         pip install pandas
-        pip install python-telegram-bot
+        pip install python-telegram-bot==20.3
         pip install bs4
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        
     - name: run
       run: |
         python main.py
