--- a/.github/workflows/manual1.yml
+++ b/.github/workflows/manual1.yml
@@ -28,5 +28,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run
       run: |
-        python main1.py
+        python main.py
 '''
